[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyhecate"
dynamic = ["version"] # Version will be supplied by hatch-vcs
description = "Automagically generate thumbnails, animated GIFs, and summaries from videos (on macOS)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Adam Twardoch", email = "adam+github@twardoch.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "Send2Trash>=1.5.0",
]
keywords = [
    "macos", "screenshot", "video", "computer-vision", "thumbnails", "frames",
    "video-summarization", "animated-gifs", "macosx", "video-thumbnail", "gif-maker",
    "generating-thumbnails", "thumbnail-images", "macos-app", "video-thumbnail-generator",
    "gif-thumbnail", "shot-boundary-detection", "video-summaries", "hecate",
    "extracting-key-frames", "gui",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://twardoch.github.io/pyhecate/"
Source = "https://github.com/twardoch/pyhecate/"

[project.scripts]
pyhecate = "pyhecate.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "(?:__version__\\s*=\\s*['\\\"]|refs/tags/v)(?P<version>[^'\\\"]+)" # Adjusted regex if needed

[tool.hatch.build.targets.sdist]
include = ["/pyhecate", "/tests"] # Adjusted to include tests later

[tool.hatch.build.targets.wheel]
packages = ["pyhecate"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "TID"]
ignore = [
    "E501", # Line too long, handled by formatter
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # For now, until stubs for dependencies are checked
check_untyped_defs = true
disallow_untyped_defs = true
